refact: 작성 게시글 불러오기 dto 수정, list반환 로직 수정